DBZ-6119 Add @Override annotation before refactoring